<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">ToneTunner</string>
    <string name="voice_input">ToneTunner Voice Input</string>
    <string name="need_record_audio_permission">"RECORD_AUDIO permission is not granted"</string>
    <string name="download_model">Download Model</string>
    <string name="status">Status:</string>
    <string name="append">Append:</string>
    <string name="translate">Translate to English:</string>
    <string name="copy_to_clipboard">Copy</string>
    <string name="info">Info</string>
    <string name="processing">Processing…</string>
    <string name="start">START</string>
    <string name="dialog_StarOnGitHub">Do you like this app? Please give a star on GitHub or buy the developer a coffee via PayPal.</string>
    <string name="dialog_Later_button">Maybe later</string>
    <string name="please_wait">Please wait…</string>
    <string name="exit_button">Exit</string>
    <string name="record_button">Record</string>
    <string name="return_button">Return</string>
    <string name="delete_button">Delete</string>
    <string name="model_output">Model output</string>
    <string name="processing_done">Processing done in\u2009</string>
    <string name="language">Language:</string>
    <string name="mode_transcription">transcription</string>
    <string name="mode_translation">translation</string>
    <string name="instructions">Press and hold the microphone button while speaking.</string>
    <string name="simple_chinese">Simplified Chinese:</string>
    <string name="text_to_speech">Text-to-speech:</string>
    <string name="tts_language_not_supported">TTS: Language not supported</string>
    <string name="tts_initialization_failed">TTS: Initialization failed</string>
    <string name="auto_button">automatic mode</string>
    <string name="error_no_input">No voice input received</string>
    <string name="install_model">Install model</string>
    <string name="auto_lang">Detect language</string>
</resources>
